# Trekking_2024

./: .gitignore  README.md
Programação/ESP32/Esp_Firmware/include/: types.h
Programação/ESP32/Esp_Firmware/src/: i2c.c  main.c  pwm.c  task_core0.c
Programação/ESP32/Esp_Firmware_old/src/: pwm.c  task_core0.c
Programação/ESP32/Esp_Firmware_teste_old/include/: types.h
Programação/ESP32/Esp_Firmware_teste_old/src/: task_core0.c
Programação/ESP32/esp_para_testes_apenas/Esp_Firmware/include/: types.h  typesold.h
Programação/ESP32/esp_para_testes_apenas/Esp_Firmware/src/: pwm.c  task_core0.c  task_core1.c
Programação/ESP32/esp_para_testes_apenas/Esp_Firmware_teste/src/: task_core1.c
Programação/RPi4/Arquivos bash/: .bashrc
Programação/RPi4/Arquivos bash/coloque em "root"/: .bashrc
Programação/RPi4/catkin_ws/: frames.gv  rosparam.sh
Programação/RPi4/catkin_ws/src/: TXT.txt
Programação/RPi4/catkin_ws/src/ackermann_vehicle_description/rviz/: nav.rviz  urdf.rviz
Programação/RPi4/catkin_ws/src/hw_interface/: CMakeLists.txt
Programação/RPi4/catkin_ws/src/learning_joy/: CMakeLists.txt  package.xml
Programação/RPi4/catkin_ws/src/navigation/: CMakeLists.txt  package.xml
Programação/RPi4/catkin_ws/src/teb_local_planner/: CMakeLists.txt  package.xml
Programação/RPi4/i2c_test/: CMakeLists.txt  exemplo1.cpp  exemplo2.cpp
Programação/RPi4/i2c_test_last/i2c_test/: CMakeLists.txt
Programação/RPi4/i2c_test_last/i2c_test/bsc_i2c_controller/include/: bsc_i2c_interface.hpp
Programação/RPi4/i2c_test_last/i2c_test/bsc_i2c_controller/src/: bsc_i2c_interface.cpp
(+67 files in other folders)
